--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
    api:
-     image: raihanparl/startup-campus-fe:latest
+     image: reyhansu/fp-rpl-fe:latest
      ports:
      - '3000:3000'
      env_file:
